# deduck

./: .gitignore  Cargo.toml  LICENSE  LICENSE.txt  README.md
src/: config.rs  duplicates.rs  filters.rs  hasher.rs  lib.rs  main.rs  prompts.rs  quarantine.rs  report.rs  scanner.rs  similar.rs  utils.rs
src/commands/: clean.rs  filter.rs  mod.rs  purge.rs  restore.rs  scan.rs
tests/: duplicates_test.rs  filter_test.rs  hasher_test.rs  quarantine_test.rs  scanner_test.rs
