[package]
name = "deduck"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
walkdir = "2"
tempfile = "3"
sha2 = "0.10"
blake3 = "1"
twox-hash = "1"
rayon = "1"
dialoguer = "0.11"
dirs = "4.0"
indicatif = "0.17"



[lib]
name = "deduck"
path = "src/lib.rs"
